--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "serverless-http": "^1.6.0"
+    "serverless-http": "^1.6.0",
+    "twilio": "^3.19.2"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
